fixed score-card z-index bug

--- a/public/styles.css
+++ b/public/styles.css
@@ -84,7 +84,7 @@ body{
     top: 0;
     height: 30px;
     color: white;
-    /* z-index: 1; */
+    z-index: 1;
 }
 
 .highScore{
@@ -93,7 +93,7 @@ body{
     top: 40px;
     height: 30px;
     color: white;
-    /* z-index: 1; */
+    z-index: 1;
 }
 
 .newGame{
